--- a/schoolopdrachten/BD_MWB/MLBD-Assignment1-jupyter(1)/Content-based recommendations.ipynb
+++ b/schoolopdrachten/BD_MWB/MLBD-Assignment1-jupyter(1)/Content-based recommendations.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
        "[9125 rows x 18 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
        "      <td>Hamlet</td>\n",
        "      <td>1998</td>\n",
        "      <td>7.2</td>\n",
-       "      <td>4,400</td>\n",
+       "      <td>4,461</td>\n",
        "      <td>R</td>\n",
        "      <td>N/A</td>\n",
        "      <td>90 min</td>\n",
@@ -958,7 +958,7 @@
        "              imdbId   Title  Year imdbRating imdbVotes Rated Released  \\\n",
        "count   9.125000e+03    9125  9125       9125      9125  9125     9125   \n",
        "unique           NaN    8844   124         79      8335    18     4826   \n",
-       "top              NaN  Hamlet  1998        7.2     4,400     R      N/A   \n",
+       "top              NaN  Hamlet  1998        7.2     4,461     R      N/A   \n",
        "freq             NaN       6   274        428         4  3519       65   \n",
        "mean    4.796230e+05     NaN   NaN        NaN       NaN   NaN      NaN   \n",
        "std     7.426405e+05     NaN   NaN        NaN       NaN   NaN      NaN   \n",
@@ -995,7 +995,7 @@
        "max       NaN        NaN  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1033,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1074,7 @@
        "Name: Plot, Length: 9125, dtype: object"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -1305,9 +1305,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 17,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1398,97 +1398,97 @@
        "}\n",
        "</style><div class=\"movies\">\n",
        "<div class=\"movie floated\">\n",
-       "    <img src=\"https://images-na.ssl-images-amazon.com/images/M/MV5BYzQ2OTk4N2QtOGQwNy00MmI3LWEwNmEtOTk0OTY3NDk2MGJkL2ltYWdlL2ltYWdlXkEyXkFqcGdeQXVyNjc1NTYyMjg@._V1_SX300.jpg\">\n",
+       "    <img src=\"https://images-na.ssl-images-amazon.com/images/M/MV5BMTc0NTU5MjI2MV5BMl5BanBnXkFtZTcwMTg5NTQzMw@@._V1_SX300.jpg\">\n",
        "    <div class=\"details\">\n",
        "        <div class=\"title\">\n",
-       "            <a href=\"https://www.imdb.com/title/tt076759\" target=\"_blank\">Star Wars: Episode IV - A New Hope</a>\n",
-       "            <span class=\"year\">(1977)</span>\n",
+       "            <a href=\"https://www.imdb.com/title/tt0465538\" target=\"_blank\">Michael Clayton</a>\n",
+       "            <span class=\"year\">(2007)</span>\n",
        "        </div>\n",
        "        <div class=\"genre\">\n",
-       "            Action, Adventure, Fantasy\n",
+       "            Crime, Drama, Thriller\n",
        "        </div>\n",
        "        <div class=\"rating floated\">\n",
-       "            <div class=\"gray-stars\"><div class=\"yellow-stars\" style=\"width: 121.79999999999998px;\"></div></div>\n",
-       "            <div class=\"score\"><b>8.7</b>/10</div>\n",
+       "            <div class=\"gray-stars\"><div class=\"yellow-stars\" style=\"width: 102.2px;\"></div></div>\n",
+       "            <div class=\"score\"><b>7.3</b>/10</div>\n",
        "        </div>\n",
        "        <div class=\"description\">\n",
-       "            Luke Skywalker joins forces with a Jedi Knight, a cocky pilot, a wookiee and two droids to save the galaxy from the Empire's world-destroying battle-station, while also attempting to rescue Princess Leia from the evil Darth Vader.\n",
+       "            A law firm brings in its \"fixer\" to remedy the situation after a lawyer has a breakdown while representing a chemical company that he knows is guilty in a multibillion-dollar class action suit.\n",
        "        </div>\n",
        "    </div>\n",
        "</div>\n",
        "<div class=\"movie floated\">\n",
-       "    <img src=\"https://images-na.ssl-images-amazon.com/images/M/MV5BMTY0NjYwMzEzNl5BMl5BanBnXkFtZTcwMTk5MTYyMQ@@._V1_SX300.jpg\">\n",
+       "    <img src=\"https://images-na.ssl-images-amazon.com/images/M/MV5BODIyNTRjYTAtMTUwZC00MmI5LWJjYzAtZmU1MDMxOGU4ZjhkXkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_SX300.jpg\">\n",
        "    <div class=\"details\">\n",
        "        <div class=\"title\">\n",
-       "            <a href=\"https://www.imdb.com/title/tt077355\" target=\"_blank\">Coma</a>\n",
-       "            <span class=\"year\">(1978)</span>\n",
+       "            <a href=\"https://www.imdb.com/title/tt080491\" target=\"_blank\">Caligula</a>\n",
+       "            <span class=\"year\">(1979)</span>\n",
        "        </div>\n",
        "        <div class=\"genre\">\n",
-       "            Drama, Horror, Mystery\n",
+       "            Drama, History\n",
        "        </div>\n",
        "        <div class=\"rating floated\">\n",
-       "            <div class=\"gray-stars\"><div class=\"yellow-stars\" style=\"width: 96.60000000000001px;\"></div></div>\n",
-       "            <div class=\"score\"><b>6.9</b>/10</div>\n",
+       "            <div class=\"gray-stars\"><div class=\"yellow-stars\" style=\"width: 74.2px;\"></div></div>\n",
+       "            <div class=\"score\"><b>5.3</b>/10</div>\n",
        "        </div>\n",
        "        <div class=\"description\">\n",
-       "            When a young female doctor notices an unnatural amount of comas occurring in her hospital she uncovers a horrible conspiracy.\n",
+       "            Details the graphic and shocking, yet undeniably tragic story of Rome's most infamous Caesar, Gaius Germanicus Caligula.\n",
        "        </div>\n",
        "    </div>\n",
        "</div>\n",
        "<div class=\"movie floated\">\n",
-       "    <img src=\"https://images-na.ssl-images-amazon.com/images/M/MV5BZjM5YjI0NmQtOTk4OS00NTNiLThkNzQtNTZlNGE4Y2VmNmU3XkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_SX300.jpg\">\n",
+       "    <img src=\"https://images-na.ssl-images-amazon.com/images/M/MV5BNWU1ZjFjMTctYjA5ZC00YTBkLTkzZjUtZWEyMjgxY2MxYWM4XkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_SX300.jpg\">\n",
        "    <div class=\"details\">\n",
        "        <div class=\"title\">\n",
-       "            <a href=\"https://www.imdb.com/title/tt0345950\" target=\"_blank\">The SpongeBob SquarePants Movie</a>\n",
-       "            <span class=\"year\">(2004)</span>\n",
-       "        </div>\n",
-       "        <div class=\"genre\">\n",
-       "            Animation, Adventure, Comedy\n",
-       "        </div>\n",
-       "        <div class=\"rating floated\">\n",
-       "            <div class=\"gray-stars\"><div class=\"yellow-stars\" style=\"width: 98.0px;\"></div></div>\n",
-       "            <div class=\"score\"><b>7.0</b>/10</div>\n",
-       "        </div>\n",
-       "        <div class=\"description\">\n",
-       "            SpongeBob SquarePants takes leave from the town of Bikini Bottom in order to track down King Neptune's stolen crown.\n",
-       "        </div>\n",
-       "    </div>\n",
-       "</div>\n",
-       "<div class=\"movie floated\">\n",
-       "    <img src=\"https://images-na.ssl-images-amazon.com/images/M/MV5BMTk3OTk2NTAyMV5BMl5BanBnXkFtZTcwMzAyMDIzMQ@@._V1_SX300.jpg\">\n",
-       "    <div class=\"details\">\n",
-       "        <div class=\"title\">\n",
-       "            <a href=\"https://www.imdb.com/title/tt0426578\" target=\"_blank\">Sophie Scholl: The Final Days</a>\n",
+       "            <a href=\"https://www.imdb.com/title/tt0120667\" target=\"_blank\">Fantastic Four</a>\n",
        "            <span class=\"year\">(2005)</span>\n",
        "        </div>\n",
        "        <div class=\"genre\">\n",
-       "            Biography, Crime, Drama\n",
+       "            Action, Adventure, Family\n",
        "        </div>\n",
        "        <div class=\"rating floated\">\n",
-       "            <div class=\"gray-stars\"><div class=\"yellow-stars\" style=\"width: 107.8px;\"></div></div>\n",
-       "            <div class=\"score\"><b>7.7</b>/10</div>\n",
+       "            <div class=\"gray-stars\"><div class=\"yellow-stars\" style=\"width: 79.80000000000001px;\"></div></div>\n",
+       "            <div class=\"score\"><b>5.7</b>/10</div>\n",
        "        </div>\n",
        "        <div class=\"description\">\n",
-       "            A dramatization of the final days of Sophie Scholl, one of the most famous members of the German World War II anti-Nazi resistance movement, The White Rose.\n",
+       "            A group of astronauts gain superpowers after a cosmic radiation exposure and must use them to oppose the plans of their enemy, Doctor Victor Von Doom.\n",
        "        </div>\n",
        "    </div>\n",
        "</div>\n",
        "<div class=\"movie floated\">\n",
-       "    <img src=\"https://images-na.ssl-images-amazon.com/images/M/MV5BYWQxOGQwY2QtMjcwMS00MDVhLTk3NDQtZjY0YzQ2OGRkNjlkXkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_SX300.jpg\">\n",
+       "    <img src=\"https://images-na.ssl-images-amazon.com/images/M/MV5BMTAxMTQwNTg1NjNeQTJeQWpwZ15BbWU3MDEzMzI0MjE@._V1_SX300.jpg\">\n",
        "    <div class=\"details\">\n",
        "        <div class=\"title\">\n",
-       "            <a href=\"https://www.imdb.com/title/tt0119008\" target=\"_blank\">Donnie Brasco</a>\n",
-       "            <span class=\"year\">(1997)</span>\n",
+       "            <a href=\"https://www.imdb.com/title/tt0114131\" target=\"_blank\">Pie in the Sky</a>\n",
+       "            <span class=\"year\">(1996)</span>\n",
        "        </div>\n",
        "        <div class=\"genre\">\n",
-       "            Biography, Crime, Drama\n",
+       "            Comedy, Romance\n",
        "        </div>\n",
        "        <div class=\"rating floated\">\n",
-       "            <div class=\"gray-stars\"><div class=\"yellow-stars\" style=\"width: 109.2px;\"></div></div>\n",
-       "            <div class=\"score\"><b>7.8</b>/10</div>\n",
+       "            <div class=\"gray-stars\"><div class=\"yellow-stars\" style=\"width: 81.19999999999999px;\"></div></div>\n",
+       "            <div class=\"score\"><b>5.8</b>/10</div>\n",
        "        </div>\n",
        "        <div class=\"description\">\n",
-       "            An FBI undercover agent infiltrates the mob and finds himself identifying more with the mafia life, at the expense of his regular one.\n",
+       "            A whimsical saga of a young man whose two life-consuming passions are unraveling traffic gridlock and an avant-garde dancer. A romantic comedy.\n",
+       "        </div>\n",
+       "    </div>\n",
+       "</div>\n",
+       "<div class=\"movie floated\">\n",
+       "    <img src=\"https://images-na.ssl-images-amazon.com/images/M/MV5BMTk4OTU3OTM1N15BMl5BanBnXkFtZTgwNzU3NDE5MDE@._V1_SX300.jpg\">\n",
+       "    <div class=\"details\">\n",
+       "        <div class=\"title\">\n",
+       "            <a href=\"https://www.imdb.com/title/tt02178256\" target=\"_blank\">The Rocket</a>\n",
+       "            <span class=\"year\">(2013)</span>\n",
+       "        </div>\n",
+       "        <div class=\"genre\">\n",
+       "            Drama\n",
+       "        </div>\n",
+       "        <div class=\"rating floated\">\n",
+       "            <div class=\"gray-stars\"><div class=\"yellow-stars\" style=\"width: 102.2px;\"></div></div>\n",
+       "            <div class=\"score\"><b>7.3</b>/10</div>\n",
+       "        </div>\n",
+       "        <div class=\"description\">\n",
+       "            A boy who is believed to bring bad luck to everyone around him leads his family and two new friends through Laos to find a new home. After a calamity-filled journey through a land scarred ...\n",
        "        </div>\n",
        "    </div>\n",
        "</div></div>"
@@ -1497,7 +1497,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1511,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -1519,12 +1519,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "181d2ffdb0d94ef2957e2b9efd7c548a",
+       "model_id": "f637b910952d49cfa327dce907aefd2b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='x', options=(('Star Wars: Episode IV - A New Hope', 232), ('Coma',…"
+       "interactive(children=(Dropdown(description='x', options=(('Michael Clayton', 6796), ('Caligula', 2292), ('Fant…"
       ]
      },
      "metadata": {},
@@ -1536,7 +1536,7 @@
        "<function __main__.print_movie(x)>"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
