Last changes before hand in

--- a/schoolopdrachten/BD_IML/assignments/Week1/Lab Session Week 1(1).ipynb
+++ b/schoolopdrachten/BD_IML/assignments/Week1/Lab Session Week 1(1).ipynb
@@ -4,6 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Student Number : 408846\n",
+    "## Student Name : Ibrahim Sahin\n",
+    "\n",
     "# Week 1: Introduction to Machine Learning with linear regression\n",
     "\n",
     "During this course you will learn how to work with machine learning techniques to build your own smart systems. The first weeks we will focus on supervised learning. This means: learning from examples. In other words: we will feed the computer plenty of examples of inputs and corresponding outputs and we hope that the computer is able to find a relation between input and output.\n",
