--- a/schoolopdrachten/BD_IML/assignments/final/final assignment/notebooks/final_notebook.ipynb
+++ b/schoolopdrachten/BD_IML/assignments/final/final assignment/notebooks/final_notebook.ipynb
@@ -4,6 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Student Number : 408846\n",
+    "## Student Name : Ibrahim Sahin\n",
+    "\n",
     "# Recognizer\n",
     "This notebook will be used to validate your model and grade your work."
    ]
@@ -18,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,27 +31,15 @@
     "import joblib\n",
     "import skimage, skimage.io\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from skimage import io, transform, color, filters, data, morphology, measure"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../classifiers/best_preprocessor.pkl'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-c652b9a00171>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Load the preprocessor (REPLACE WITH YOUR CODE)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mpreproc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjoblib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'../classifiers/best_preprocessor.pkl'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# Load your final model (REPLACE WITH YOUR CODE)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mclf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjoblib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'../classifiers/best_classifier.pkl'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\isahi\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\joblib\\numpy_pickle.py\u001b[0m in \u001b[0;36mload\u001b[1;34m(filename, mmap_mode)\u001b[0m\n\u001b[0;32m    575\u001b[0m             \u001b[0mobj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_unpickle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfobj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    576\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 577\u001b[1;33m         \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rb'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    578\u001b[0m             \u001b[1;32mwith\u001b[0m \u001b[0m_read_fileobject\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmmap_mode\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfobj\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    579\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../classifiers/best_preprocessor.pkl'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the preprocessor (REPLACE WITH YOUR CODE)\n",
     "preproc = joblib.load('../classifiers/best_preprocessor.pkl') \n",
@@ -59,27 +50,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,\n",
+    "            'major_axis_length', 'minor_axis_length', 'euler_number', \n",
+    "            'centroid-0', 'eccentricity', 'local_centroid-0', 'perimeter', \n",
+    "            'perimeter_crofton', 'filled_area', 'orientation']\n",
+    "\n",
+    "def initialize_image_grids(image):\n",
+    "    zipcode = image\n",
+    "    zipcode = zipcode *-1\n",
+    "    gray = color.rgb2gray(zipcode)\n",
+    "    thresh = filters.threshold_otsu(gray)\n",
+    "    binary = gray > thresh\n",
+    "    binary_splitted = [binary[:, :32], binary[:, 32:64], binary[:, 64:96], binary[:, 96:128]]\n",
+    "    \n",
+    "    df = pd.DataFrame()\n",
+    "\n",
+    "    for x in range(0, len(binary_splitted)):\n",
+    "        \n",
+    "        test = binary_splitted[x]\n",
+    "        height = 8\n",
+    "        width = 8\n",
+    "\n",
+    "        s_width = 0\n",
+    "        s_heigth = 0\n",
+    "\n",
+    "        for i in range(1, 17):\n",
+    "            h = s_heigth+height\n",
+    "            w = s_width+width\n",
+    "            feat = test[s_heigth:h, s_width:w]\n",
+    "            white_pixels = feat[feat==1]\n",
+    "            total_white_pixels = len(white_pixels)\n",
+    "            df.loc[x, i] = total_white_pixels\n",
+    "            if (i%4 == 0):\n",
+    "                s_width = 0\n",
+    "                s_heigth = s_heigth + height\n",
+    "            else:\n",
+    "                s_width = s_width + width\n",
+    "        \n",
+    "    return df\n",
+    "\n",
+    "image_properties = ['label', 'area', 'centroid', \n",
+    "                    'perimeter', 'eccentricity', 'euler_number',\n",
+    "                    'filled_area','perimeter_crofton', 'local_centroid', \n",
+    "                    'major_axis_length', 'minor_axis_length', 'orientation']\n",
+    "\n",
+    "def initialize_image_props(image):\n",
+    "    zipcode = image\n",
+    "    zipcode = zipcode *-1\n",
+    "    gray = color.rgb2gray(zipcode)\n",
+    "    thresh = filters.threshold_otsu(gray)\n",
+    "    binary = gray > thresh\n",
+    "    \n",
+    "    # remove the white small spots/dots\n",
+    "    binary = morphology.binary_opening(binary)\n",
+    "    \n",
+    "    # make the white zip numbers thicker\n",
+    "    binary = morphology.binary_dilation(binary)\n",
+    "    \n",
+    "    # some numbers may have holes in it. That could seperate the number in 2 different labels. with closing the gap will be closed\n",
+    "    binary = morphology.binary_closing(binary)\n",
+    "    \n",
+    "    # return number back to its original state before it was made thicker. make the numbers thinner\n",
+    "    binary = morphology.binary_erosion(binary)\n",
+    "\n",
+    "    label_image, total_labels = measure.label(binary, return_num=True)\n",
+    "    \n",
+    "    global image_properties\n",
+    "    props = measure.regionprops_table(label_image, properties=image_properties)\n",
+    "    tmp_df = pd.DataFrame(props)\n",
+    "    \n",
+    "    # filter out labels that have too small areas. these labels are small dots that could not be filled with the opening function\n",
+    "    tmp_df = tmp_df.query('area > 50').reset_index(drop=True)\n",
+    "        \n",
+    "    return tmp_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "def classify_image(filename):\n",
-    "\"\"\"\n",
-    "Load an image from file and predict the four digits in the image.\n",
-    "The result should be an array containing the 4 digits (as string)\n",
-    "\"\"\"\n",
     "    result = list()\n",
-    "    \n",
-    "    ### <YOUR CODE HERE>\n",
-    "    \n",
-    "    # Load the image from file\n",
+    "\n",
     "    img_array = skimage.io.imread(filename)\n",
+    "\n",
+    "    tmp_result_grid = initialize_image_grids(img_array)\n",
+    "    tmp_result_props = initialize_image_props(img_array)\n",
+    "    tmp_result = pd.concat([tmp_result_grid,tmp_result_props], axis=1)\n",
+    "    tmp_result[features] = preproc.transform(tmp_result[features])\n",
+    "    predicted = clf.predict(tmp_result[features])\n",
     "    \n",
-    "    # For each digit, collect features, preprocess and predict\n",
     "    for i in range(4):\n",
-    "        result.append(str(i))\n",
-    "        \n",
-    "    ### </YOUR CODE HERE>\n",
+    "        result.append(str(predicted[i]))\n",
     "    \n",
     "    return result"
    ]
@@ -93,15 +161,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Digit accuracy:  0.07083333333333333 ( 136 / 1784 )\n",
-      "Zipcode accuracy:  0.0 ( 0 / 480 )\n"
+      "Digit accuracy:  1.0 ( 4 / 0 )\n",
+      "Zipcode accuracy:  1.0 ( 1 / 0 )\n"
      ]
     }
    ],
