last commit before i begin/continue with MLBD

--- a/schoolopdrachten/BD_IML/assignments/final/final assignment/notebooks/testje.ipynb
+++ b/schoolopdrachten/BD_IML/assignments/final/final assignment/notebooks/testje.ipynb
@@ -26,7 +26,7 @@
     "from sklearn.feature_selection import chi2\n",
     "\n",
     "def load_images_from_folder(folder):\n",
-    "    images = []\n",
+    "    images = []open\n",
     "    images_name = []\n",
     "    for filename in os.listdir(folder):\n",
     "        img = io.imread(os.path.join(folder,filename))\n",
@@ -73900,7 +73900,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.9"
   }
  },
  "nbformat": 4,
